--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@
             -->
 
     <div class="recipe-section">
-        <h1>My recipies</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-        <div class="container">
+        <h1 class="header-font">My recipies</h1>
+        <p class="header-font context">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        <div class="container card-container">
             <div class="col card">
-                <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                <img src="images/food/Project Cover.jpg" alt="" class="card-img">
+                <h2 class="header-font">Recipie Title</h2>
+                <p class="header-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
             </div>
             <div class="col card">
-                <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                <img src="images/food/Project Cover1.jpg" alt="" class="card-img">
+                <h2 class="header-font">Recipie Title</h2>
+                <p class="header-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
             </div>
             <div class="col card">
-                <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                <img src="images/food/Project Cover.png" alt=""class="card-img">
+                <h2 class="header-font">Recipie Title</h2>
+                <p class="header-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
             </div>
         </div>
     </div>
