Blog secion completed

--- a/index.html
+++ b/index.html
@@ -93,8 +93,25 @@
                 Blogs 
             -->
 
-    <div class="container">
-        
+    <div class="blogs-section">
+        <h1 class="text-center header-font">Blogs</h1>
+        <div class="container header-font">
+            <div class="col">
+                <img src="images/food/Project Cover5.png" alt="Male model">
+                <h3 class="header-font">Easy Meal Prep and Simple Recipes</h3>
+                <p>This easy-on-the-wallet blog also gets a thumbs up from kids. Parent duo Diana Johnson and Eric Johnson run Eating Richly, which features healthy, decadent recipes like Wh... <a href="#" class="p-font"> More &gt;</a></p>
+            </div>
+            <div class="col">
+                <img src="images/food/Project Cover7.png" alt="female model">
+                <h3>The Healthy Muslims</h3>
+                <p>The Healthy Muslims is a fitness and healthy eating blog co-founded by husband-and-wife duo Belal Hafeez and Nazima Qureshi. Hafeez is a personal trainer and Qureshi is a registered dietician an... <a href="#" class="p-font"> More &gt;</a></p>
+            </div>
+            <div class="col">
+                <img src="images/food/Project Cover8.png" alt="food">
+                <h3>Mama Knows Nutrition</h3>
+                <p>Registered dietitian Kacie Barnes's blog features nutritious kid-friendly recipes and is a resource for credible answers to everyday questions. If you've ever wondered about healthy baby food options or wh... <a href="#" class="p-font"> More &gt;</a></p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
