Seventh Section Completed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="col">
             <h1 class="header-font grey-text">About Me</h1>
             <p class="p-font">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, dolor recusandae voluptates animi maiores odio perspiciatis labore distinctio maxime quaerat nam cum! Recusandae laboriosam impedit aperiam. Debitis facere eos blanditiis delectus rerum distinctio quo voluptates. Laboriosam quidem amet voluptas impedit?
+                Over the last four years I have dealt with covers from 10 to 900, often cooking in extreme conditions with a brigade I have only just met, and we have worked together to produce AA Rosette standards meals in a very tight time-frame. This always calls for a very calm temperament, quick level thinking and a good sense of humor which I believe I possess.
             </p>
             <a href="#" class="order-food-btn header-font">Contact Me</a>
         </div>
@@ -48,23 +48,23 @@
             -->
 
     <div class="recipe-section">
-        <h1 class="header-font">My recipies</h1>
-        <p class="header-font context">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        <h1 class="header-font">My Recipies</h1>
+        <p class="header-font context">Our Recipe is simply the best of the food and bakery industry. Food Nerds has been the industry's standard foods ever since the 1500s.</p>
         <div class="container card-container">
             <div class="col card">
                 <img src="images/food/Project Cover.jpg" alt="" class="card-img">
-                <h2 class="header-font">Recipie Title</h2>
-                <p class="header-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <h2 class="header-font">Crumb Cake</h2>
+                <p class="header-font">This pudding is an update of a 1970's American dessert known as 'Better than Robert Redford'.</p>
             </div>
             <div class="col card">
                 <img src="images/food/Project Cover1.jpg" alt="" class="card-img">
-                <h2 class="header-font">Recipie Title</h2>
-                <p class="header-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <h2 class="header-font">Beef Ribs</h2>
+                <p class="header-font">Let the taste of Texas take over your weekend and get this pulled pork onto your table. High in fibre.</p>
             </div>
             <div class="col card">
                 <img src="images/food/Project Cover.png" alt=""class="card-img">
-                <h2 class="header-font">Recipie Title</h2>
-                <p class="header-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <h2 class="header-font">She-Crab Soup</h2>
+                <p class="header-font">European immigrants made this confection - which has large, crisp crumbs on top - a NY coffee shop</p>
             </div>
         </div>
     </div>
@@ -94,26 +94,49 @@
             -->
 
     <div class="blogs-section">
-        <h1 class="text-center header-font">Blogs</h1>
+        <h1 class="text-center header-font grey-text">Blogs</h1>
         <div class="container header-font">
             <div class="col">
                 <img src="images/food/Project Cover5.png" alt="Male model">
                 <h3 class="header-font">Easy Meal Prep and Simple Recipes</h3>
-                <p>This easy-on-the-wallet blog also gets a thumbs up from kids. Parent duo Diana Johnson and Eric Johnson run Eating Richly, which features healthy, decadent recipes like Wh... <a href="#" class="p-font text-gradient"> More &gt;</a></p>
+                <p>This easy-on-the-wallet blog also gets a thumbs up from kids. Parent duo Diana Johnson and Er... <a href="#" class="p-font text-gradient"> More &gt;</a></p>
             </div>
             <div class="col">
                 <img src="images/food/Project Cover7.png" alt="female model">
                 <h3>The Healthy Muslims</h3>
-                <p>The Healthy Muslims is a fitness and healthy eating blog co-founded by husband-and-wife duo Belal Hafeez and Nazima Qureshi. Hafeez is a personal trainer and Qureshi is a registered dietician an... <a href="#" class="p-font text-gradient"> More &gt;</a></p>
+                <p>The Healthy Muslims is a fitness and healthy eating blog co-founded by husband-and-wife duo Belal Hafeez and Nazima Qureshi. Haf... <a href="#" class="p-font text-gradient"> More &gt;</a></p>
             </div>
             <div class="col">
                 <img src="images/food/Project Cover8.png" alt="food">
                 <h3>Mama Knows Nutrition</h3>
-                <p>Registered dietitian Kacie Barnes's blog features nutritious kid-friendly recipes and is a resource for credible answers to everyday questions. If you've ever wondered about healthy baby food options or wh... <a href="#" class="p-font text-gradient"> More &gt;</a></p>
+                <p>Registered dietitian Kacie Barnes's blog features nutritious kid-friendly recipes and is a resource for credible answers to ev... <a href="#" class="p-font text-gradient"> More &gt;</a></p>
             </div>
         </div>
     </div>
 
-    
+            <!--
+                 Form Section
+             -->
+
+    <div class="form-section header-font">
+        <h1 class="text-center grey-text">Contact Us</h1>
+        <form action="#">
+            <input type="text" name="firstName" id="firstName" placeholder="First Name">
+            <input type="text" name="lastName" id="lastName"placeholder="Last Name"><br>
+            <input type="email" name="email" id="email" placeholder="Your Email Address"><br>
+            <textarea name="message" id="textArea" cols="30" rows="10" placeholder="Type Your Message"></textarea><br>
+            <input type="submit" value="SUBMIT" class="order-food-btn header-font" id="submit">
+        </form>
+    </div>
+
+
+            <!-- 
+                Footer Section
+             -->
+
+    <footer class="header-font text-center">
+        <h1 class=""><span class="text-gradient">FOOD</span> NERDS</h1>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
 </body>
 </html>
