--- a/index.html
+++ b/index.html
@@ -130,6 +130,17 @@
     </div>
 
 
+            <!--
+                Visit Store
+             -->
+
+    <div class="visit-store-section">
+        <div class="visit-store">
+            <h1 class="grey-text header-font">Get Amazing Deals & Offers</h1>
+            <a href="#" class="order-food-btn header-font">Visit Store</a>
+        </div>
+    </div>
+
             <!-- 
                 Footer Section
              -->
