--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 Top Section 
             -->
 
-    <div class="container top-section">
+    <section class="container top-section">
         <div class="col grey-text">
             <h1 class="header-font"><span class="text-gradient">Skip</span> The Diet,</h1> 
             <h1 class="header-font">Just Eat Healthy</h1> 
@@ -24,15 +24,15 @@
         <div class="col">
             <img src="images/female/Group 8425.png" alt="Banner girl" class="top-image">
         </div>
-    </div>
+    </section>
 
             <!--
                 About Me section
             -->
 
-    <div class="container about-me">
+    <section class="container about-me">
         <div class="col header-font">
-            <img src="images/female/Person Image.png" alt="Person Image" class="about-img">
+            <img src="images/female/PersonImage.png" alt="Person Image" class="about-img">
         </div>
         <div class="col">
             <h1 class="header-font grey-text">About Me</h1>
@@ -41,13 +41,13 @@
             </p>
             <a href="#" class="order-food-btn header-font">Contact Me</a>
         </div>
-    </div>
+    </section>
 
             <!-- 
                 My Recipe Section 
             -->
 
-    <div class="recipe-section">
+    <section class="recipe-section">
         <h1 class="header-font">My Recipies</h1>
         <p class="header-font context">Our Recipe is simply the best of the food and bakery industry. Food Nerds has been the industry's standard foods ever since the 1500s.</p>
         <div class="container card-container">
@@ -67,13 +67,13 @@
                 <p class="header-font">European immigrants made this confection - which has large, crisp crumbs on top - a NY coffee shop</p>
             </div>
         </div>
-    </div>
+    </section>
 
             <!-- 
                 Success Section
              -->
 
-    <div class="container success-section">
+    <section class="container success-section">
         <div class="col header-font">
             <h1 class="header-font">700k</h1>
             <p class="header-font">Youtube Subscribers</p>
@@ -86,14 +86,44 @@
             <h1 class="header-font">100k</h1>
             <p class="header-font">Dribbble Shot Likes</p>
         </div>
-    </div>
+    </section>
+
+
+            <!-- 
+                Food Gallery Section
+             -->
+    <section class="food-gallery">
+        <h1 class="text-center grey-text header-font">Food Gallery</h1>
+        <div class="container">
+            <div class="col">
+                <img src="images/food/menu1.png" alt="food1">
+            </div>
+            <div class="col">
+                <img src="images/food/menu2.png" alt="food1">
+            </div>
+            <div class="col">
+                <img src="images/food/menu3.png" alt="food1">
+            </div>
+        </div>
+        <div class="container">
+            <div class="col">
+                <img src="images/food/menu4.png" alt="food1">
+            </div>
+            <div class="col">
+                <img src="images/food/menu5.png" alt="food1">
+            </div>
+            <div class="col">
+                <img src="images/food/menu6.png" alt="food1">
+            </div>
+        </div>
+    </section>
 
 
             <!-- 
                 Blogs 
             -->
 
-    <div class="blogs-section">
+    <section class="blogs-section">
         <h1 class="text-center header-font grey-text">Blogs</h1>
         <div class="container header-font">
             <div class="col">
@@ -112,13 +142,13 @@
                 <p>Registered dietitian Kacie Barnes's blog features nutritious kid-friendly recipes and is a resource for credible answers to ev... <a href="#" class="p-font text-gradient"> More &gt;</a></p>
             </div>
         </div>
-    </div>
+    </section>
 
             <!--
                  Form Section
              -->
 
-    <div class="form-section header-font">
+    <section class="form-section header-font">
         <h1 class="text-center grey-text">Contact Us</h1>
         <form action="#">
             <input type="text" name="firstName" id="firstName" placeholder="First Name">
@@ -127,19 +157,19 @@
             <textarea name="message" id="textArea" cols="30" rows="10" placeholder="Type Your Message"></textarea><br>
             <input type="submit" value="SUBMIT" class="order-food-btn header-font" id="submit">
         </form>
-    </div>
+    </section>
 
 
             <!--
                 Visit Store
              -->
 
-    <div class="visit-store-section">
+    <section class="visit-store-section">
         <div class="visit-store">
             <h1 class="grey-text header-font">Get Amazing Deals & Offers</h1>
             <a href="#" class="order-food-btn header-font">Visit Store</a>
         </div>
-    </div>
+    </section>
 
             <!-- 
                 Footer Section
