--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1 class="header-font">With Food Network</h1>
             <p class="header-font">Imagine you don't need a diet because we provide <br>
                 healthy and delicious food for you!</p>
-            <a href="#" class="order-food-btn header-font">Order Food</a>
+            <a href="https://www.linkedin.com/in/md-johirul-islam-akash-7310b6174/" target="_blank" class="order-food-btn header-font">Order Food</a>
         </div>
         <div class="col">
             <img src="images/female/Group 8425.png" alt="Banner girl" class="top-image">
@@ -39,7 +39,7 @@
             <p class="p-font">
                 Over the last four years I have dealt with covers from 10 to 900, often cooking in extreme conditions with a brigade I have only just met, and we have worked together to produce AA Rosette standards meals in a very tight time-frame. This always calls for a very calm temperament, quick level thinking and a good sense of humor which I believe I possess.
             </p>
-            <a href="#" class="order-food-btn header-font">Contact Me</a>
+            <a href="https://www.linkedin.com/in/md-johirul-islam-akash-7310b6174/"  target="_blank" class="order-food-btn header-font">Contact Me</a>
         </div>
     </section>
 
@@ -129,17 +129,17 @@
             <div class="col">
                 <img src="images/food/Project Cover5.png" alt="Male model">
                 <h3 class="header-font">Easy Meal Prep and Simple Recipes</h3>
-                <p>This easy-on-the-wallet blog also gets a thumbs up from kids. Parent duo Diana Johnson and Er... <a href="#" class="p-font text-gradient"> More &gt;</a></p>
+                <p>This easy-on-the-wallet blog also gets a thumbs up from kids. Parent duo Diana Johnson and Er... <a href="https://www.linkedin.com/in/md-johirul-islam-akash-7310b6174/" target="_blank" class="p-font text-gradient"> More &gt;</a></p>
             </div>
             <div class="col">
                 <img src="images/food/Project Cover7.png" alt="female model">
                 <h3>The Healthy Muslims</h3>
-                <p>The Healthy Muslims is a fitness and healthy eating blog co-founded by husband-and-wife duo Belal Hafeez and Nazima Qureshi. Haf... <a href="#" class="p-font text-gradient"> More &gt;</a></p>
+                <p>The Healthy Muslims is a fitness and healthy eating blog co-founded by husband-and-wife duo Belal Hafeez and Nazima Qureshi. Haf... <a href="https://www.linkedin.com/in/md-johirul-islam-akash-7310b6174/" target="_blank" class="p-font text-gradient"> More &gt;</a></p>
             </div>
             <div class="col">
                 <img src="images/food/Project Cover8.png" alt="food">
                 <h3>Mama Knows Nutrition</h3>
-                <p>Registered dietitian Kacie Barnes's blog features nutritious kid-friendly recipes and is a resource for credible answers to ev... <a href="#" class="p-font text-gradient"> More &gt;</a></p>
+                <p>Registered dietitian Kacie Barnes's blog features nutritious kid-friendly recipes and is a resource for credible answers to ev... <a href="https://www.linkedin.com/in/md-johirul-islam-akash-7310b6174/" target="_blank" class="p-font text-gradient"> More &gt;</a></p>
             </div>
         </div>
     </section>
@@ -150,7 +150,7 @@
 
     <section class="form-section header-font">
         <h1 class="text-center grey-text">Contact Us</h1>
-        <form action="#">
+        <form action="">
             <input type="text" name="firstName" id="firstName" placeholder="First Name">
             <input type="text" name="lastName" id="lastName"placeholder="Last Name"><br>
             <input type="email" name="email" id="email" placeholder="Your Email Address"><br>
@@ -167,7 +167,7 @@
     <section class="visit-store-section">
         <div class="visit-store">
             <h1 class="grey-text header-font">Get Amazing Deals & Offers</h1>
-            <a href="#" class="order-food-btn header-font">Visit Store</a>
+            <a href="https://www.linkedin.com/in/md-johirul-islam-akash-7310b6174/" target="_blank" class="order-food-btn header-font">Visit Store</a>
         </div>
     </section>
 
