--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             -->
 
     <section class="container about-me">
-        <div class="col header-font">
+        <div class="col header-font col-image">
             <img src="images/female/PersonImage.png" alt="Person Image" class="about-img">
         </div>
-        <div class="col">
+        <div class="col col-text">
             <h1 class="header-font grey-text">About Me</h1>
             <p class="p-font">
                 Over the last four years I have dealt with covers from 10 to 900, often cooking in extreme conditions with a brigade I have only just met, and we have worked together to produce AA Rosette standards meals in a very tight time-frame. This always calls for a very calm temperament, quick level thinking and a good sense of humor which I believe I possess.
